tests/ui/feature-gates/feature-gate-exclusive-range-pattern.stderr
error[E0658]: exclusive range pattern syntax is experimental
  --> $DIR/feature-gate-exclusive-range-pattern.rs:3:9
   |
LL |         0 .. 3 => {}
   |         ^^^^^^
   |
   = note: see issue #37854 <https://github.com/rust-lang/rust/issues/37854> for more information
   = help: add `#![feature(exclusive_range_pattern)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = help: use an inclusive range pattern, like N..=M

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
